--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         <p id="message"></p>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
